feat: agregar DTOs Request y Response a las cuatro entidades del sistema, con validaciones y documentación Swagger